# joy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: knowledge-base.md
.planning/debug/resolved/: cross-pane-sync-broken.md
.planning/forensics/: report-20260415-124837.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/notes/: 2026-04-14-phase-12-terminalpane-claude.md  project-detail-virtual-layer-design.md  sync-panes-clear-on-no-match.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW-FIX.md  01-UAT.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/joy/: __init__.py  app.py  dispatch.py  models.py  mr_status.py  operations.py  resolver.py  store.py  terminal_sessions.py  worktrees.py
tests/: conftest.py  test_archive.py  test_cursor_restore.py  test_filter.py  test_legend.py  test_main.py  test_models.py  test_mr_status.py  test_object_row.py  test_operations.py  test_pane_layout.py  test_project_list.py  test_propagation.py  test_refresh.py  test_resolver.py  test_screens.py  test_store.py  test_sync.py  test_terminal_pane.py  test_terminal_sessions.py  test_tui.py  test_worktree_pane.py  test_worktree_pane_cursor.py  test_worktrees.py
(+298 files in other folders)
