[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "joy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "tomli-w>=1.0",
    "textual>=8.2",
    "iterm2>=2.15",
]

[project.scripts]
joy = "joy.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/joy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-m", "not slow and not macos_integration"]
markers = [
    "macos_integration: tests requiring live macOS apps (iTerm2, Notion, etc.)",
    "slow: tests using Textual pilot (async TUI driver, 6-12s each) -- run with -m slow",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25",
]
